<resources>
    <string name="app_name">SportyGo</string>
    <string name="title_reviews">Reviews</string>
    <string name="text_rating">4.2</string>
    <string name="text_rating_description">based on 23 reviews</string>
    <string name="text_excellent">Excellent</string>
    <string name="text_good">Good</string>
    <string name="text_average">Average</string>
    <string name="text_below_average">Below Average</string>
    <string name="text_poor">Poor</string>
    <string name="text_write_a_review">Write a Review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_write_review">Write Review</string>
    <string name="review_user_name">Joan Perkins</string>
    <string name="text_days_ago">1 days ago</string>
    <string name="text_review_body">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</string>
    <string name="text_user_rating">4.0</string>
    <string name="text_item_name">Bjorg chair White Plastic</string>
    <string name="text_item_description">A product feature is a factual statement about the product that provides technical information.</string>
    <string name="text_add_photo_or_video">Add Photo or Video</string>
    <string name="text_write_your_review">Write your Review</string>
    <string name="text_chars_remaining">400 characters remaining</string>
    <string name="text_submit_review">Submit Review</string>
    <string name="text_click_to_upload">Click here to upload</string>
    <string name="title_profile">Profile</string>
    <string name="text_username">#udith_</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_shipping_address">Shipping Address</string>
    <string name="text_wishlist">WishList</string>
    <string name="title_purchases">Purchases</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_userrname">Username</string>
    <string name="label_phone">Phone</string>
    <string name="text_phone">(256)-578-8352</string>
    <string name="text_save">SAVE</string>
    <string name="label_email">Email</string>
    <string name="text_email">joane.fernandes@gmail.com</string>
    <string name="label_gender">Gender</string>
    <string name="title_rewards">Rewards</string>
    <string name="text_current_points">CURRENT POINTS</string>
    <string name="text_value_current_points">3,110</string>
    <string name="text_lifetime_score">Lifetime score 22,100</string>
    <string name="title_badges">Badges</string>
    <string name="title_history">History</string>
    <string name="title_my_points">My Points</string>
    <string name="title_buy_points">Buy Points</string>
    <string name="title_friends">Friends</string>
    <string name="title_value_item_category">Sports Shoes</string>
    <string name="text_value_points">+1000</string>
    <string name="text_value_item_description">Nike Zoom Rival Waffle 5</string>
    <string name="text_mutual_friends">8 mutual friends</string>
    <string name="text_gift">GIFT</string>
    <string name="title_gift">Gift</string>
    <string name="text_receiver_user">Send To</string>
    <string name="text_amount">Select Amount</string>
    <string name="text_value_amount">299.00</string>
    <string name="text_message">Message</string>
    <string name="text_send">SEND</string>
    <string name="title_activity_bottom_anavigationctivity">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cart">Cart</string>
    <string name="txt_pants">ADIDAS SPORTSWEAR TRACK PANTS</string>
    <string name="txt_pants_description">Tapred track pants celebrating the relese of "NO TIME TO DIE".</string>
    <string name="txt_dumbbell">Deluxe Rubber Dumbbells</string>
    <string name="txt_Dumbbell2">Pro Dumbbell</string>
    <string name="txt_dumbbell_desc">50lb rubber coated</string>
    <string name="txt_black_pants">Track Pants</string>
    <string name="txt_pants_des">Addidas Black size L</string>
    <string name="txt_hoodie">Hoodie</string>
    <string name="txt_hoodie_desc">PUMA Modern Sports Hoodie L</string>
    <string name="txt_shaker">Shaker Bottle</string>
    <string name="txt_shaker_des">500ml</string>
    <string name="txt_udith">Udith Eranga</string>
    <string name="txt_thilina">Thiina Niranjan</string>
    <string name="txt_thilina_UN">\@thilina</string>
    <string name="title_rewards_buy_points">10 000 RP</string>
    <string name="title_dollers">15$</string>
    <string name="title_buy">BUY</string>
    <string name="title_reward_buy_points2">20 000 RP</string>
    <string name="Title_dollers2">25$</string>

</resources>