<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".rewards.PointActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:background="@color/lightGrey"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="160dp"
                    android:layout_height="90dp"
                    android:minWidth="80dp"
                    android:minHeight="45dp"
                    app:srcCompat="@drawable/shoe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="470dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_value_item_category"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_value_item_description"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_value_points"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:chipBackgroundColor="@color/Excellent"
                    app:chipIcon="@drawable/star"
                    app:chipIconSize="16dp"
                    app:iconStartPadding="8dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>